fixes overflow isues on main

--- a/src/components/css/folder-lists.css
+++ b/src/components/css/folder-lists.css
@@ -22,7 +22,7 @@
 }
 
 .folder-header-reduced {
-  width: 80%;
+  width: 100%;
   padding: 0px 10px;
   background: purple;
   text-align: left;
