--- a/src/components/css/header-bar.css
+++ b/src/components/css/header-bar.css
@@ -45,6 +45,7 @@
   padding: 10px;
   position: sticky;
   top: 0px;
+  z-index: 10;
 }
 
 .content-header-black a {
