--- a/src/components/css/landing.css
+++ b/src/components/css/landing.css
@@ -91,6 +91,7 @@
   padding: 20px;
   max-width: 1000px;
   margin: 0 auto;
+  background: #faf7f4;
 }
 
 .about-newsflash-txt p {
@@ -153,6 +154,11 @@
 .landing-footer a:hover {
   text-decoration: underline;
   color: white;
+}
+.about-newsflash-txt .beta {
+  font-size: 1rem;
+  font-style: italic;
+  margin-top: 40px;
 }
 
 @media only screen and (max-width: 560px) {
