--- a/src/components/css/register-login.css
+++ b/src/components/css/register-login.css
@@ -12,6 +12,7 @@
   top: 25%;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 }
 
 .login-form {
